<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    tools:context=".Main">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        style="@style/StyleOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome" />

    <TextView
        android:id="@+id/textView3"
        style="@style/StyleTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_one" />

    <Button
        android:id="@+id/buttonOpenCatalog"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_one"
        android:text="@string/manage_catalog" />

    <TextView
        android:id="@+id/textView2"
        style="@style/StyleTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_two" />

        <Button
            android:id="@+id/buttonCreateList"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_three"
            android:text="@string/create_button" />

        <Button
            android:id="@+id/buttonViewList"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_two"
            android:text="@string/open_button" />

    <TextView
        android:id="@+id/textViewResult"
        style="@style/StyleTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

</LinearLayout>
</ScrollView>